array.island.Island.scala.error
Compilation error:
Island:2: error: Missing closing brace `}' assumed here
def island(num:Array[Int]): Int = {
^Island:2: error: expected class or object definition
def island(num:Array[Int]): Int = {
^